# git-stack

./: .clippy.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml  release.toml
.github/: renovate.json5  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  example.yml  feature_request.yml  hello-world.md
.github/workflows/: audit.yml  ci.yml  post-release.yml  pre-commit.yml  rust-next.yml
crates/git-fixture/: Cargo.toml
crates/git-fixture/docs/: schema.json
crates/git-fixture/src/: lib.rs  main.rs  model.rs
docs/: comparison.md  design.md  reference.md
src/: actions.rs  any.rs  branches.rs  commands.rs  config.rs  dag.rs  git.rs  lib.rs  log.rs  repo.rs
src/backup/: backup.rs  mod.rs  stack.rs
src/git/: branches.rs  commands.rs  mod.rs  protect.rs  repo.rs
src/graph/: actions.rs  branch.rs  commit.rs  mod.rs  node.rs  ops.rs
src/legacy/: config.rs  mod.rs
src/legacy/git/: branches.rs  commands.rs  protect.rs  repo.rs
src/legacy/graph/: actions.rs  mod.rs  node.rs  ops.rs
src/rewrite/: mod.rs
src/stash/: mod.rs  snapshot.rs  stack.rs
tests/: branches.rs  fixture.rs  graph.rs  repo.rs
tests/fixtures/: branches.yml  conflict.yml  fixup.yml  fork.yml  git_rebase_existing.yml  git_rebase_new.yml  pr-semi-linear-merge.yml  pr-squash.yml
tests/legacy/: branches.rs  fixture.rs  graph.rs  main.rs  repo.rs
tests/testsuite/: alias.rs  amend.rs  branches.rs  fixture.rs  graph.rs  main.rs  ops.rs  repo.rs  reword.rs
