[workspace]
resolver = "2a"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.73"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package]
name = "git-stack"
description = "Stacked branch management for Git"
version = "0.10.17"
repository = "https://github.com/gitext-rs/git-stack.git"
documentation = "https://github.com/gitext-rs/git-stack.git"
readme = "README.md"
categories = ["command-line-interface", "development-tools"]
keywords = ["git", "cli"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/gitext-rs/git-stack/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
git2 = { version = ">=0.16, <=0.18", default-features = false, features = ["vendored-libgit2"] }
git-config-env = "0.2.1"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
log = "0.4.21"
env_logger = { version = "0.11", default-features = false, features = ["humantime", "color"] }
colorchoice-clap = "1.0.3"
anstyle = "1.0.6"
anstream = "0.6.13"
proc-exit = "2.0.1"
eyre = "0.6.12"
human-panic = "1.2.3"
termtree = "0.4.1"
indexmap = "2.2.6"

git2-ext = "0.6.1"
git-branch-stash = "0.10.1"
humantime = "2.1.0"
itertools = "0.12.1"
ignore = "0.4.22"
bstr = "1.9.1"
maplit = "1.0.2"
petgraph = "0.6.4"
downcast-rs = "1.2.0"
names = { version = "0.14.0", default-features = false }
elsa = "1.10.0"
shlex = "1.3.0"

[dev-dependencies]
git-fixture = { version = "0.3.4", features = ["yaml"] }
assert_fs = "1.1.1"
snapbox = { version = "0.5.9", features = ["cmd", "path"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
