[package]
name = "git-fixture"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
bstr = { version = "0.2", features = ["serde1"] }
derive_more = "0.99.0"
eyre = "0.6"
serde_yaml = "0.8.17"
serde_json = "1.0"
toml = "0.5"
assert_cmd = "1.0"
structopt = "0.3"
proc-exit = "1.0"
