[package]
name = "git-fixture"
description = "Reproducible git trees for bug reporting and testing"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/epage/git-stack.git"
documentation = "https://docs.rs/git-fixture"
categories = ["command-line-interface", "development-tools"]
keywords = ["git", "cli"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
bstr = { version = "0.2", features = ["serde1"] }
derive_more = "0.99.0"
eyre = "0.6"
serde_yaml = "0.8.17"
serde_json = "1.0"
schemars = { version = "0.8.3", features = ["preserve_order"] }
toml = "0.5"
assert_cmd = "2.0"
structopt = "0.3"
proc-exit = "1.0"
