[package]
name = "git-fixture"
description = "Reproducible git trees for bug reporting and testing"
version = "0.2.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/epage/git-stack.git"
documentation = "https://docs.rs/git-fixture"
categories = ["command-line-interface", "development-tools"]
keywords = ["git", "cli"]
edition = "2018"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[dependencies]
serde = { version = "1", features = ["derive"] }
humantime = "2"
humantime-serde = "1"
bstr = { version = "0.2", features = ["serde1"] }
derive_more = "0.99.17"
eyre = "0.6"
serde_yaml = "0.8.17"
serde_json = "1.0"
schemars = { version = "0.8.8", features = ["preserve_order"] }
toml = "0.5"
assert_cmd = "2.0"
clap = { version = "3.0", features = ["derive"] }
proc-exit = "1.0"
